--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Brayan Alaya",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.633.0",
+    "@aws-sdk/s3-request-presigner": "^3.633.0",
     "@prisma/client": "^5.14.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -20,6 +22,7 @@
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "resend": "^2.1.0",
+    "sharp": "^0.33.5",
     "validator": "^13.12.0"
   },
   "devDependencies": {
